<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/collapsing_img"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/movie_poster"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">
                <ImageButton
                    android:id="@+id/bt_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/up_button"
                    android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                    android:background="#00000000"
                    android:layout_gravity="start"/>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activities.DetailActivity"
        tools:showIn="@layout/activity_detail">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="MOVIE NAME" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="2dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
                    tools:layout_editor_absoluteX="16dp" />

                <ImageView
                    android:id="@+id/detail_poster"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/movie_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/detail_poster"
                    app:layout_constraintTop_toBottomOf="@+id/detail_poster"
                    tools:text="OVERVIEW" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/release_date"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_overview"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/release_date"
                    app:layout_constraintTop_toBottomOf="@+id/release_date"
                    tools:text="dd-MM-yyyy" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date" />

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/rate"
                    app:layout_constraintTop_toBottomOf="@+id/rate"
                    tools:text="0" />

                <TextView
                    android:id="@+id/rater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/voter"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_rate"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rate" />

                <TextView
                    android:id="@+id/tv_voter_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rater"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/rater"
                    app:layout_constraintTop_toBottomOf="@+id/rater"
                    tools:text="0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_anchor="@id/nestedScroll"
        app:layout_anchorGravity="center_horizontal|center_vertical"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        android:contentDescription="@string/favorite_button"
        app:fabSize="normal"
        app:layout_anchor="@id/nestedScroll"
        app:layout_anchorGravity="bottom|end"
        android:backgroundTint="@color/yellow_200"
        android:src="@drawable/ic_baseline_favorite_border_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>